--- a/src/pages/home.module.scss
+++ b/src/pages/home.module.scss
@@ -1,1 +1,66 @@
-// TODO
+.posts {
+  list-style: none;
+
+  .post {
+    max-width: 700px;
+    transition: filter 0.3s;
+
+    &:hover {
+      filter: brightness(0.7);
+    }
+    
+    & + .post {
+      margin-top: 3.2rem;
+    }
+    
+    a {
+      text-decoration: none;
+      
+      h2 {
+        color: var(--white-300);
+        font-size: 1.86rem;
+      }
+
+      p {
+        margin-top: 0.5rem;
+        color: var(--gray-500);
+        font-size: 1.2rem;
+      }
+
+      div {
+        display: flex;
+        margin-top: 1.6rem;
+
+        span {
+          display: flex;
+          align-items: center;
+          font-size: 0.9rem;
+          color: var(--gray-500);
+
+          & + span {
+            margin-left: 1.6rem;
+          }
+          
+          svg {
+            margin-right: 0.5rem;
+          }
+        }
+      }
+    }
+  }  
+}
+
+.loadPosts {
+  border: 0;
+  background: transparent;
+  margin-top: 4.26rem;
+  font-size: 1.2rem;
+  font-weight: 600;
+  color: var(--pink-500);
+  cursor: pointer;
+  transition: filter 0.3s;
+
+  &:hover {
+    filter: brightness(0.6);
+  }
+}
