--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -5,3 +5,32 @@
 }
 
 // TODO
+:root {
+  --white-300: #F8F8F8;
+
+  --gray-300: #D7D7D7;
+  --gray-500: #BBBBBB;
+  --gray-900: #1A1D23;
+
+  --black-700: #070707;
+  
+  --pink-500: #FF57B2;
+
+  font-family: 'Inter', sans-serif;
+}
+
+body {
+  background: var(--gray-900);
+}
+
+@media (max-width: 1080px) {
+  html {
+    font-size: 93.75%;
+  }
+}
+
+@media (max-width: 720px) {
+  html{
+    font-size: 87.5%;
+  }
+}
